# spec-kit-ru

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
