[project]
name = "specify-cli"
version = "0.0.20"
description = "Specify CLI — часть GitHub Spec Kit. Инструмент для подготовки проектов к разработке, управляемой спецификациями (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
