[project]
name = "specify-ru-cli"
version = "0.1.0"
description = "Specify-ru CLI — часть GitHub Spec Kit. Инструмент для подготовки проектов к разработке, управляемой спецификациями (SDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify-ru = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]
